// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editor > util > map > recalculatePatternCoordinates > deleting > should delete a point in the middle of the control points 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.922524,
    42.092349999999996,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.923058,
    42.096168,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > deleting > should delete the first stop 1`] = `
Array [
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > deleting > should delete the last stop 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > inserting > should insert a point after the last stop 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.923104,
    42.096481,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
  Array [
    -77.923058,
    42.096168,
  ],
  Array [
    -77.923104,
    42.096481,
  ],
  Array [
    -77.923226,
    42.096987999999996,
  ],
  Array [
    -77.92334,
    42.097350999999996,
  ],
  Array [
    -77.923577,
    42.097873,
  ],
  Array [
    -77.92363800000001,
    42.097988,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > inserting > should insert a point before the first stop 1`] = `
Array [
  Array [
    -77.92553,
    42.08666,
  ],
  Array [
    -77.92553000000001,
    42.086708,
  ],
  Array [
    -77.924515,
    42.086704,
  ],
  Array [
    -77.92405,
    42.086696,
  ],
  Array [
    -77.92369099999999,
    42.086704,
  ],
  Array [
    -77.923424,
    42.086696,
  ],
  Array [
    -77.923317,
    42.086687999999995,
  ],
  Array [
    -77.92319499999999,
    42.086662000000004,
  ],
  Array [
    -77.922921,
    42.086543999999996,
  ],
  Array [
    -77.922852,
    42.086528,
  ],
  Array [
    -77.92274499999999,
    42.086517,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.923104,
    42.096481,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > inserting > should insert a point in the middle of the control points 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.922524,
    42.092349999999996,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92263799999999,
    42.092189000000005,
  ],
  Array [
    -77.923737,
    42.092182,
  ],
  Array [
    -77.92375200000001,
    42.091819,
  ],
  Array [
    -77.92375200000001,
    42.091819,
  ],
  Array [
    -77.923737,
    42.092182,
  ],
  Array [
    -77.92263799999999,
    42.092189000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.92276100000001,
    42.094261,
  ],
  Array [
    -77.92276015989871,
    42.09426187381858,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > updating > should update a point in the middle of the control points 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.92252574804179,
    42.09235127309673,
  ],
  Array [
    -77.922524,
    42.092349999999996,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.92263799999999,
    42.092189000000005,
  ],
  Array [
    -77.923737,
    42.092182,
  ],
  Array [
    -77.92375200000001,
    42.091819,
  ],
  Array [
    -77.92375200000001,
    42.091819,
  ],
  Array [
    -77.923737,
    42.092182,
  ],
  Array [
    -77.92263799999999,
    42.092189000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.923058,
    42.096168,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > updating > should update the first stop 1`] = `
Array [
  Array [
    -77.92553,
    42.08666,
  ],
  Array [
    -77.92553000000001,
    42.086708,
  ],
  Array [
    -77.924515,
    42.086704,
  ],
  Array [
    -77.92405,
    42.086696,
  ],
  Array [
    -77.92369099999999,
    42.086704,
  ],
  Array [
    -77.923424,
    42.086696,
  ],
  Array [
    -77.923317,
    42.086687999999995,
  ],
  Array [
    -77.92319499999999,
    42.086662000000004,
  ],
  Array [
    -77.922921,
    42.086543999999996,
  ],
  Array [
    -77.922852,
    42.086528,
  ],
  Array [
    -77.92274499999999,
    42.086517,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.922158,
    42.089252,
  ],
  Array [
    -77.92215494185281,
    42.08925407008939,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.922799,
    42.094528000000004,
  ],
  Array [
    -77.922974,
    42.095657,
  ],
  Array [
    -77.92305462145765,
    42.096168018547736,
  ],
]
`;

exports[`editor > util > map > recalculatePatternCoordinates > updating > should update the last stop 1`] = `
Array [
  Array [
    -77.922203,
    42.086407,
  ],
  Array [
    -77.922196,
    42.086498,
  ],
  Array [
    -77.922173,
    42.086498,
  ],
  Array [
    -77.92183700000001,
    42.086513000000004,
  ],
  Array [
    -77.92188300000001,
    42.086956,
  ],
  Array [
    -77.921929,
    42.087368,
  ],
  Array [
    -77.922043,
    42.088386,
  ],
  Array [
    -77.922112,
    42.088844,
  ],
  Array [
    -77.922135,
    42.089099,
  ],
  Array [
    -77.92231799999999,
    42.090522,
  ],
  Array [
    -77.92235600000001,
    42.090847000000004,
  ],
  Array [
    -77.922432,
    42.091491000000005,
  ],
  Array [
    -77.922509,
    42.092201,
  ],
  Array [
    -77.922654,
    42.093502,
  ],
  Array [
    -77.922684,
    42.093745999999996,
  ],
  Array [
    -77.922707,
    42.09391,
  ],
  Array [
    -77.92274499999999,
    42.094158,
  ],
  Array [
    -77.92276015989871,
    42.09426187381858,
  ],
  Array [
    -77.92276015989871,
    42.09426187381858,
  ],
  Array [
    -77.923058,
    42.096168,
  ],
  Array [
    -77.923104,
    42.096481,
  ],
  Array [
    -77.923226,
    42.096987999999996,
  ],
  Array [
    -77.92334,
    42.097350999999996,
  ],
  Array [
    -77.923577,
    42.097873,
  ],
  Array [
    -77.92363800000001,
    42.097988,
  ],
]
`;
